优化父节点循环依赖